09_arcvive/TimeSCRPATemplet/GpMessages/100232942375300
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: Tuesday, May 6, 2025 9:09:11 PM</msg><msg code="-2147467259" type="100">﻿  File "C:\Users\carucci_r\OneDrive - City of Hackensack\_Hackensack_Data_Repository\GIS_Tools\Scripts\ScriptsTimeSCRPATemplet\Updated Weekly Crime Report.py", line 83
    arcpy.AddMessage("Pivot Table (Block x Time_of_Day):
                     ^
﻿SyntaxError: unterminated string literal (detected at line 83)
</msg><msg code="0" type="0">Failed script Updated Weekly Crime Report...</msg><msg code="-2147467259" type="100">Failed to execute (WeeklyCrimeExport).</msg><msg code="0" type="3">Failed at Tuesday, May 6, 2025 9:09:11 PM (Elapsed Time: 0.06 seconds)</msg></messages>